--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ publishing {
         //mavenLocal()
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/Scrupyy/AdvancedChatCore"
+            url = uri("https://maven.pkg.github.com/Arematics/AdvancedChatCore")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key")  ?: System.getenv("TOKEN")
