--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ loader_version=0.17.2
 fabric_api_version=0.133.0+1.21.8
 
 mod_version=1.5.12
-maven_group=com.scrupy
+maven_group=com.arematics
 archives_base_name=AdvancedChatCore
 
 malilib_version=0.25.5
