--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,11 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      - name: Create tag for new version
+        run: |
+          git tag $CURRENT_TAG
+          git push origin $CURRENT_TAG
+
       - name: Compute release type vars
         id: rel
         run: |
