--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,9 +79,17 @@ jobs:
           echo "EOF" >> "$GITHUB_OUTPUT"
 
       - name: Build with Gradle
+        id: build
         run: |
             ./gradlew remapJar -PcurrentTag="${CURRENT_TAG}" -PlastTag="${LAST_TAG}" --stacktrace
-            ls -lah build/libs/
+
+            # Find first JAR in build/libs, convert to absolute path
+            FILE=$(find "$(pwd)/build/libs" -maxdepth 1 -type f -name '*.jar' | head -n1)
+            if [ -z "$FILE" ]; then
+            echo "No JARs found in build/libs" >&2
+            exit 1
+            fi
+            echo "file=$FILE" >> "$GITHUB_OUTPUT"
 
       # ---- Optional: Publish to Modrinth via their action (recommended) ----
       # Requires: secrets.MODRINTH_TOKEN and you provide the correct fields below.
@@ -94,11 +102,11 @@ jobs:
           version: ${{ env.CURRENT_TAG }}
           changelog: ${{ steps.changelog.outputs.changelog }}
           game-versions: ${{ vars.MINECRAFT_VERSION }}
+          files: ${{ steps.build.outputs.file }}
           loaders: |-
             fabric
             quilt
-          files: |
-            build/libs/*.jar
+
       - name: Create or update GitHub Release
         run: |
           set -euo pipefail
@@ -119,15 +127,8 @@ jobs:
               ${{ steps.rel.outputs.prerelease_flag }}
           fi
 
-      - name: Upload artifacts to Release (clobber)
-        run: |
-          set -euo pipefail
-          shopt -s nullglob
-          FILES=(build/libs/*.jar)
-          if [ ${#FILES[@]} -eq 0 ]; then
-            echo "No JARs found to upload."; exit 1
-          fi
-          gh release upload "${CURRENT_TAG}" "${FILES[@]}" --clobber
+      - name: Upload to GitHub Release
+        run: gh release upload "${CURRENT_TAG}" "${{ steps.build.outputs.file }}" --clobber
 
       - name: Upload build artifacts (CI archive)
         uses: actions/upload-artifact@v4
