--- a/build.gradle
+++ b/build.gradle
@@ -104,10 +104,11 @@ publishing {
         //mavenLocal()
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/Arematics/AdvancedChatCore")
+            url = uri("https://maven.pkg.github.com/${System.getenv("GITHUB_REPOSITORY")}")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key")  ?: System.getenv("TOKEN")
+                // GitHub Packages requires a username + token; GH sets these in the runner
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
